--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 	<groupId>com.springboot</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>demo</name>
-	<description>Spring Boot project for interviews</description>
+	<name>officemanager</name>
+	<description>Office Manager project for interviews</description>
 	<properties>
 		<java.version>17</java.version>
 		<testcontainers.version>1.17.4</testcontainers.version>
